--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -13,14 +13,6 @@
   note   = {[Online; accessed 2-May-2023]}
 }
 
-@misc{moire_pattern,
-  author       = {{Wikipedia contributors}},
-  title        = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
-  year         = {2023},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Moir%C3%A9_pattern}},
-  note         = {[Online; accessed 21-April-2023]}
-}
-
 @article{blinn,
   title  = {{Illumination for Computer Generated Pictures}},
   author = {{Bui Tuong Phong}},
@@ -28,15 +20,11 @@
   note   = {[Online; accessed 12-December-2022]}
 }
 
-@misc{cheat_engine,
-  title        = {Cheat Engine},
-  howpublished = {\url{https://www.cheatengine.org/}}
-}
-
 @misc{bounding_boxes,
   title        = {MDN Web Docs, 3D collision detection},
   howpublished = {\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}}
 }
+
 
 @misc{camera_projection,
   title        = {Model View Projection},
@@ -46,6 +34,11 @@
 @misc{cereal,
   title        = {cereal - A C++11 library for serialization},
   howpublished = {\url{https://uscilab.github.io/cereal/}}
+}
+
+@misc{cheat_engine,
+  title        = {Cheat Engine},
+  howpublished = {\url{https://www.cheatengine.org/}}
 }
 
 @misc{cmake,
@@ -116,10 +109,17 @@
   howpublished = {\url{https://en.wikipedia.org/wiki/Indentation_style}}
 }
 
-
 @misc{mit,
   title        = {The MIT License},
   howpublished = {\url{https://opensource.org/license/mit/}}
+}
+
+@misc{moire_pattern,
+  author       = {{Wikipedia contributors}},
+  title        = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2023},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Moir%C3%A9_pattern}},
+  note         = {[Online; accessed 21-April-2023]}
 }
 
 
@@ -127,6 +127,7 @@
   title        = {Premake - Powerfully simple build configuration},
   howpublished = {\url{https://premake.github.io/}}
 }
+
 
 @article{rdna,
   title  = {{RDNA architecture - The all new Radeon gaming architecture powering ``Navi''}},
@@ -148,6 +149,11 @@
 @misc{rgp,
   title        = {AMD Radeon GPU Profiler},
   howpublished = {\url{https://gpuopen.com/rgp/}}
+}
+
+@misc{svn,
+  title        = {Apache Subversion},
+  howpublished = {\url{https://subversion.apache.org/}}
 }
 
 @misc{texture_mipmaps,
@@ -186,6 +192,9 @@
   howpublished = {\url{https://registry.khronos.org/vulkan/specs/1.3/html/vkspec.html/}}
 }
 
-
+@misc{vulkan,
+  title = {Vulkan},
+  howpublished = {\url{https://www.vulkan.org/}},
+}
 
 
